# translator

./: CMakeLists.txt  README.md  pascal.g4
NEW/: main.cpp  pescal.interp  pescal.tokens  pescalBaseVisitor.cpp  pescalBaseVisitor.h  pescalLexer.cpp  pescalLexer.h  pescalLexer.interp  pescalParser.cpp  pescalParser.h  pescalUserVisitor.h  pescalVisitor.cpp  pescalVisitor.h
gtest/: CMakeLists.txt
include/: CMakeLists.txt  Executor.h  Table.h
samples/: CMakeLists.txt
src/: CMakeLists.txt  Executor.cpp
test/: CMakeLists.txt  test_table.cpp
